--- a/home.css
+++ b/home.css
@@ -27,7 +27,8 @@ nav{
   align-items: center;
   position: fixed;
   background: transparent;
-  width: 90vw;
+  width: 100%;
+  padding-right: 50px;
   /* overflow: hidden; */
   /* border: 2px solid black ; */
 }
@@ -75,17 +76,23 @@ nav .fas{
 }
 
 @media(max-width: 1000px){
+  nav{
+    padding-right: 20px;
+    /* padding-top: 20px; */
+  }
   nav a img{
-    height:90px;
+    height:100px;
+    margin-left: 30px;
+
   }
   .nav-links{
       position: absolute;
-      background: #f44336;
+      background: #2a6cbb;
       /* opacity: 0.5;  */
       height: 100vh;
       width: 200px;
       top:0;
-      right: -300px;
+      right: -250px;
       text-align: left;
       z-index: 2;
       transition: 1s;
@@ -99,7 +106,6 @@ nav .fas{
   .nav-links ul li a{
       padding-left: 24px;
   }
-
   .nav-links ul li::after {
   display: none;
   }
@@ -107,7 +113,6 @@ nav .fas{
     display: block;
     color: #fff;
     margin: 20px;
-    margin-bottom: 50px;
     font-size: 30px;
     cursor: pointer;
   }
