--- a/eventsnew/eventsnew.css
+++ b/eventsnew/eventsnew.css
@@ -2,10 +2,131 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-.event{
+    font-family: 'Poppins', sans-serif;
+  }
+  section{
     height: 100vh;
     width: 100vw;
-    background: url('/events/img/events-02.png') center/cover;
-    color:white;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    scroll-snap-align: start;
+  }
+  .containerfull{
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    height: 100vh;
+    width: 100%;
+    overflow-x: hidden;  
+  }
+  /* ---------------Navbar-------------------------- */
+  nav{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    position: fixed;
+    background: transparent;
+    width: 100%;
+    padding-right: 50px;
+    /* overflow: hidden; */
+    /* border: 2px solid black ; */
+  }
+  nav a img{
+    /* border: 2px solid black ; */
+    height: 105px;
+    margin-left: 70px;
+    padding-top: 5px;
+  }
+  
+  .nav-links ul li{
+    margin: 10px 0px;
+    padding: 8px 12px;
+    list-style: none;
+    display: inline-block;
+    position: relative;
+    /* border: 2px solid red; */
+  }
+  .nav-links ul li a{
+    text-decoration: none;
+    color:white; 
+    font-size: 20px;
+    letter-spacing: 1px;
+    padding: 0px 20px;
+    border-radius: 5px;
+    transition: 1s ease;
+  }
+  
+  
+  .nav-links ul li::after{
+    content: '';
+    height: 2px;
+    width: 0%;
+    background-color:#7779a8;
+    display:block;  
+    margin:auto;
+    transition: 0.5s;
+  }
+  
+  .nav-links ul li:hover::after{
+    width: 70%;
+  }
+  nav .fas{
+    display: none;
+  }
+  
+  @media(max-width: 1000px){
+    nav{
+      padding-right: 20px;
+      /* padding-top: 20px; */
+      z-index: 20;
+    }
+    nav a img{
+      height:100px;
+      margin-left: 30px;
+  
+    }
+    .nav-links{
+        position: absolute;
+        background: #2a6cbb;
+        /* opacity: 0.5;  */
+        height: 100vh;
+        width: 200px;
+        top:0;
+        right: -250px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+  
+    .nav-links ul li{
+        display: block;
+        margin: 20px 0px;
+        padding: 10px 0px;
+    }
+    .nav-links ul li a{
+        padding-left: 24px;
+    }
+    .nav-links ul li::after {
+    display: none;
+    }
+    nav .fas{
+      display: block;
+      color: #fff;
+      margin: 20px;
+      font-size: 30px;
+      cursor: pointer;
+    }
+  }
+  .one{
+      background: url('/eventsnew/pronite.png') center/cover;  
+    }
+  .two{
+      background: url('/eventsnew/ytfest.png') center/cover;  
+    }
+  .three{
+      background: url('/eventsnew/comedy.png') center/cover;  
+    }
+  .four{
+      background: url('/eventsnew/theater.png') center/cover;  
+    }
