--- a/sponsor/sponsor.css
+++ b/sponsor/sponsor.css
@@ -2,40 +2,33 @@ body {
   font-family: 'Montserrat';
   text-align: center;
 }
-
 h1,h3{
   font-family: 'Montserrat';
 }
-
+h1{
+  margin-top: 5vh;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
 h3{
   font-size: 1.5rem;
   font-weight: 600;
 }
-
-
 .section1{
   background-color: #fff;
   position: relative;
 }
-
 .container-fluid {
   padding: 0% 15%;
 }
-
 .title{
   padding: 0 36%;
 }
-
-.feature-box {
-  padding: 3%;
-}
-
 .feature-text{
   font-size: 1.5rem;
   font-weight: 600;
   color: teal;
 }
-
 .testimonial-image{
   width: 100%;
   margin: 20px;
