--- a/home.css
+++ b/home.css
@@ -804,34 +804,29 @@ list-style: none;
 align-items: center;
 justify-content: space-evenly;
 height: 100%;
+text-decoration: none;
 }
-#features .logoicon .iconcontainer ul li{
-font-size: 25px;
+
+#features .logoicon .iconcontainer ul li a{
+  font-size: 25px;
 transition: 0.5s;
+color: grey;
 }
-#features .logoicon ul li:hover:before{
-filter: blur(3px);
-transform: scale(1.2);
-}
-
-#features .logoicon ul li:nth-child(1):hover{
-color: #456cba;
-}
-#features .logoicon ul li:nth-child(2):hover{
-color: #26a4f2;
-
-}
-#features .logoicon ul li:nth-child(3):hover{
-color: #e23670;
-
-}
-#features .logoicon ul li:nth-child(4):hover{
+#features .logoicon ul li a:nth-child(1):hover{
 color: #2a6cbb;
-
 }
-#features .logoicon ul li:nth-child(5):hover{
+/* #features .logoicon ul li a:nth-child(2):hover{
+color: #26a4f2;
+}
+#features .logoicon ul li a:nth-child(3):hover{
+color: #e23670;
+}
+#features .logoicon ul li a i:nth-child(4):hover{
+color: #2a6cbb;
+}
+#features .logoicon ul li a i:nth-child(5):hover{
 color: #fd3737;
-}
+} */
 
 #features  .box .logo{
 align-items: flex-start;
