--- a/home.css
+++ b/home.css
@@ -247,9 +247,24 @@ nav .fas{
   cursor: pointer;
   margin:10px ;
 }
-.media .logos li a{
-color: white;
-transition: color 0.5s;
+.media .logos li a img{
+width: 100%;
+transition: transform 0.5s;
+}
+.media .logos li img:hover{
+  color: aliceblue;
+  transform: scale(1.3);
+  text-shadow: 
+  1px -100px 100px pink, 
+  2px 2px 10px #000000, 
+  0 0 5px #00ffef, 
+  0 0 10px #00ffef, 
+  0 0 200px #00ffef, 
+  0 0 200px #00ffef, 
+  0 0 100px #00ffef;
+}
+.media .logos ul li img{
+  width: 30px;
 }
 @media(max-width: 1000px){
   .aboutus{
@@ -276,75 +291,11 @@ transition: color 0.5s;
   .media{
     margin-bottom: 10vh;
   }
+  .media .logos ul li img{
+    color: grey;
+    width: 30px;
+  }
 }
-
-.media .logos ul li:hover:before{
-  filter: blur(3px);
-  transform: scale(1.2);
-}
-
-.media .logos li a:nth-child(1){
-  color: grey;
-}
-
-.media .logos li a:nth-child(1):hover{
-  color: #456cba;
-  text-shadow: 
-  1px -100px 100px pink, 
-  2px 2px 10px #000000, 
-  0 0 5px #00ffef, 
-  0 0 10px #00ffef, 
-  0 0 200px #00ffef, 
-  0 0 200px #00ffef, 
-  0 0 100px #00ffef;
-}
-.media .logos li:nth-child(2):hover{
-  color: #26a4f2;
-  text-shadow: 
-  1px -100px 100px #8d8d8d, 
-  2px 2px 10px #000000, 
-  0 0 5px #00ffef, 
-  0 0 10px #00ffef, 
-  0 0 200px #00ffef, 
-  0 0 400px #00ffef, 
-  0 0 100px #00ffef;
-
-}
-.media .logos li:nth-child(3):hover{
-  color: #e23670;
-  text-shadow: 
-  1px -100px 100px #8d8d8d, 
-  2px 2px 10px #000000, 
-  0 0 5px #fd3737, 
-  0 0 10px #fd3737, 
-  0 0 200px #fd3737, 
-  0 0 400px #fd3737, 
-  0 0 100px #fd3737;
-
-}
-.media .logos li:nth-child(4):hover{
-  color: #2a6cbb;
-  text-shadow: 
-  1px -100px 100px #8d8d8d, 
-  2px 2px 10px #000000, 
-  0 0 5px #00ffef, 
-  0 0 10px #00ffef, 
-  0 0 200px #00ffef, 
-  0 0 400px #00ffef, 
-  0 0 100px #00ffef;
-}
-.media .logos li:nth-child(5):hover{
-  color: #fd3737;
-  text-shadow: 
-  1px -100px 100px #8d8d8d, 
-  2px 2px 10px #000000, 
-  0 0 5px #fd3737, 
-  0 0 10px #fd3737, 
-  0 0 200px #fd3737, 
-  0 0 400px #fd3737, 
-  0 0 100px #fd3737;
-}
-
 
 /* ----------Social Cause------------ */
 .four{
