--- a/competition/comp.css
+++ b/competition/comp.css
@@ -72,7 +72,7 @@ a{
 	transition: color 0.5s ease-out;
 }
 a:focus, a:hover {
-    color: #2c30b3;
+    color: #4247d8;
     text-decoration: underline;
 }
 .carousel-caption a {
