--- a/home.css
+++ b/home.css
@@ -29,6 +29,7 @@ nav{
   background: transparent;
   width: 100%;
   padding-right: 50px;
+  z-index: 99;
   /* overflow: hidden; */
   /* border: 2px solid black ; */
 }
@@ -97,6 +98,7 @@ nav .fas{
       text-align: left;
       z-index: 2;
       transition: 1s;
+      z-index: 99;
   }
 
   .nav-links ul li{
@@ -159,7 +161,6 @@ nav .fas{
     width: 80vw;
   }
 }
-
 /* ------------ABOUT US------------------- */
 .aboutus{
   height: 100vh;
@@ -178,15 +179,13 @@ nav .fas{
   align-items: center;
   justify-content: center;
 }
-
 .aboutus .flexleft img{
   /* border: 2px solid green; */
+  filter: hue-rotate(190deg);
   width: 150%;
   padding: 5%;
+  z-index: 0;
 }
-
-
-
 .aboutus .flexright{
   color: #F4EEE4;
   flex-basis: 45%;
@@ -215,6 +214,7 @@ nav .fas{
   justify-content:center;
   text-align: center;
   align-items: center;
+  z-index: 1;
   /* border: 2px solid pink; */
 }
 
@@ -246,26 +246,63 @@ nav .fas{
   font-size: 30px;
   cursor: pointer;
   margin:10px ;
+
 }
-.media .logos li a img{
-width: 100%;
-transition: transform 0.5s;
+.media .logos ul li a{
+font-size: 30px;
+transition: 0.5s;
+color: white;
 }
-.media .logos li img:hover{
-  color: aliceblue;
-  transform: scale(1.3);
+.media .logos ul li:nth-child(1):hover{
   text-shadow: 
-  1px -100px 100px pink, 
+  1px -2px 10px #3c88fa, 
   2px 2px 10px #000000, 
-  0 0 5px #00ffef, 
-  0 0 10px #00ffef, 
-  0 0 200px #00ffef, 
-  0 0 200px #00ffef, 
-  0 0 100px #00ffef;
-}
-.media .logos ul li img{
-  width: 30px;
-}
+  0 0 5px #3c88fa, 
+  0 0 10px #3c88fa, 
+  0 0 30px #3c88fa, 
+  0 0 40px #3c88fa, 
+  0 0 10px #3c88fa; 
+  }
+.media .logos ul li:nth-child(2):hover{
+  text-shadow: 
+  1px -2px 10px #32cfff, 
+  2px 2px 10px #000000, 
+  0 0 5px #32cfff, 
+  0 0 10px #32cfff, 
+  0 0 30px #32cfff, 
+  0 0 40px #32cfff, 
+  0 0 10px #32cfff; 
+  }
+.media .logos ul li:nth-child(3):hover{
+  text-shadow: 
+  1px -2px 10px #ff32d3, 
+  2px 2px 10px #000000, 
+  0 0 5px #ff32d3, 
+  0 0 10px #ff32d3, 
+  0 0 30px #ff32d3, 
+  0 0 40px #ff32d3, 
+  0 0 10px #ff32d3; 
+  }
+.media .logos ul li:nth-child(4):hover{
+  text-shadow: 
+  1px -2px 10px #3c88fa, 
+  2px 2px 10px #000000, 
+  0 0 5px #3c88fa, 
+  0 0 10px #3c88fa, 
+  0 0 30px #3c88fa, 
+  0 0 40px #3c88fa, 
+  0 0 10px #3c88fa; 
+  }
+.media .logos ul li:nth-child(5):hover{
+  text-shadow: 
+  1px -2px 10px #ff303b, 
+  2px 2px 10px #000000, 
+  0 0 5px #ff303b, 
+  0 0 10px #ff303b, 
+  0 0 30px #ff303b, 
+  0 0 40px #ff303b, 
+  0 0 10px #ff303b; 
+  }
 @media(max-width: 1000px){
   .aboutus{
     flex-direction: column;
@@ -281,7 +318,6 @@ transition: transform 0.5s;
   .aboutus .flexright .heading{
     font-size: 3rem;
   }
-  
   .aboutus .flexright .text{
     font-size: 1rem;
   }
@@ -751,18 +787,59 @@ text-decoration: none;
 #features .logoicon .iconcontainer ul li a{
   font-size: 25px;
 transition: 0.5s;
-color: grey;
+color: white;
 }
-#features .logoicon ul li a:nth-child(1):hover{
-color: #2a6cbb;
+
+
+#features .logoicon ul li:nth-child(1):hover{
 text-shadow: 
-1px -2px 10px #2E3192, 
+1px -2px 10px #3c88fa, 
 2px 2px 10px #000000, 
-0 0 5px #2E3192, 
-0 0 10px #2E3192, 
-0 0 30px #2E3192, 
-0 0 40px #2E3192, 
-0 0 10px #2E3192; 
+0 0 5px #3c88fa, 
+0 0 10px #3c88fa, 
+0 0 30px #3c88fa, 
+0 0 40px #3c88fa, 
+0 0 10px #3c88fa; 
+}
+#features .logoicon ul li:nth-child(2):hover{
+text-shadow: 
+1px -2px 10px #32cfff, 
+2px 2px 10px #000000, 
+0 0 5px #32cfff, 
+0 0 10px #32cfff, 
+0 0 30px #32cfff, 
+0 0 40px #32cfff, 
+0 0 10px #32cfff; 
+}
+#features .logoicon ul li:nth-child(3):hover{
+text-shadow: 
+1px -2px 10px #ff32d3, 
+2px 2px 10px #000000, 
+0 0 5px #ff32d3, 
+0 0 10px #ff32d3, 
+0 0 30px #ff32d3, 
+0 0 40px #ff32d3, 
+0 0 10px #ff32d3; 
+}
+#features .logoicon ul li:nth-child(4):hover{
+text-shadow: 
+1px -2px 10px #3c88fa, 
+2px 2px 10px #000000, 
+0 0 5px #3c88fa, 
+0 0 10px #3c88fa, 
+0 0 30px #3c88fa, 
+0 0 40px #3c88fa, 
+0 0 10px #3c88fa;  
+}
+#features .logoicon ul li:nth-child(5):hover{
+text-shadow: 
+1px -2px 10px #ff303b, 
+2px 2px 10px #000000, 
+0 0 5px #ff303b, 
+0 0 10px #ff303b, 
+0 0 30px #ff303b, 
+0 0 40px #ff303b, 
+0 0 10px #ff303b; 
 }
 #features  .box .logo{
 align-items: flex-start;
