--- a/events/eventsnew.css
+++ b/events/eventsnew.css
@@ -16,6 +16,7 @@
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     height: 100vh;
+    scroll-behavior: smooth;
     width: 100%;
     overflow-x: hidden;  
   }
