--- a/competition/comp.css
+++ b/competition/comp.css
@@ -57,7 +57,7 @@ header .carousel-inner .item {
 	font-weight: bold;
 }
 .carousel-caption p {
-	font-size: 20px;
+	font-size: 23px;
 	padding-top: 10px;
 	margin-right: 20px;
 	margin-top:10px ;
@@ -118,7 +118,12 @@ a:focus, a:hover {
 		font-size: 30px;
 	}
 	.carousel-caption p {
+		margin-right: 0px;
 		font-size: 20px;
+	}
+	.carousel-caption .viewpdf p {
+		margin-right: 20px;
+		margin-bottom: 20px;
 	}
 	.carousel-indicators li{
 		padding: 5px;
@@ -157,8 +162,12 @@ a:focus, a:hover {
 		font-size: 25px;
 	}
 	.carousel-caption p {
+		margin-right: 0px;
 		font-size: 18px;
 		font-weight: 100;
+	}
+	.carousel-caption .viewpdf p {
+		margin-right: 20px;
 	}
 	.carousel-caption a {
 		padding: 5px 15px;
