--- a/home.css
+++ b/home.css
@@ -12,7 +12,7 @@ section{
   align-items: center;
   justify-content: center;
   color: white;
-  scroll-snap-align: start;
+  scroll-snap-align: start; 
 }
 .containerfull{
   scroll-behavior: smooth;
@@ -22,6 +22,15 @@ section{
   width: 100%;
   overflow-x: hidden;  
 }
+@media(max-width: 1000px){
+  section{
+    scroll-snap-align:unset; 
+  }
+  .containerfull{
+    overflow-y:unset;
+  }
+}
+
 /* ---------------Navbar-------------------------- */
 nav{
   display: flex;
